# bridge_segmentation

./: CMakeLists.txt  README.md
evaluation/: evaluate.py  get_best_avg_config.py  get_best_config.py  main_no_gui.cpp  parameter_comparison_vis.py  pr_rc_time_data_vis.py  search_parameter.py
evaluation/ground_truth/Auetal/: formated_Auetal_slab_GT.txt
evaluation/ground_truth/Elstertal/: Elstertal_formated_Elstertal_slab_GT.txt
evaluation/ground_truth/Hochmosel/: formated_Hochmosel_bridge_GT.txt  formated_Hochmosel_slab_GT.txt
evaluation/ground_truth/Koernetal/: formated_Koernetal_slab_GT.txt
evaluation/parameter_search/: Elstertal_best_config_0.txt
evaluation/pipeline_configs/: 0_config_500_1.1_0.04_default.txt  0_config_550_0.6_0.025_default.txt
evaluation/pipeline_output/Elstertal_0_config_550_0.6_0.025_default/: slab_indices.txt  time_measurements.txt
include/: utils.h  viewer.h
screenshots/: screenshot-1608211506.cam
source/: main.cpp  utils.cpp  viewer.cpp
