cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(SegmentationPipeline)
find_package(PCL 1.5 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(startPipeline source/main.cpp)
target_link_libraries(startPipeline ${PCL_LIBRARIES})